vendor/thiserror-1.0.24/tests/ui/transparent-enum-source.stderr
error: transparent variant can't contain #[source]
 --> $DIR/transparent-enum-source.rs:6:11
  |
6 |     Other(#[source] anyhow::Error),
  |           ^^^^^^^^^
