vendor/thiserror-1.0.24/tests/ui/transparent-enum-source.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    #[error(transparent)]
    Other(#[source] anyhow::Error),
}

fn main() {}
